[package]
name = "scbbindings"
version = "0.1.0"
authors = ["Sandeep Bhat <sandeep.anand.bhat@gmail.com>"]
repository = "https://github.com/sandeepbhat/rustscbwrapper"
license = "MIT"
description = "Wrapper for OpenData APIs from Statistiska Central Byran (SCB) Sweden"
categories = ["api-bindings"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
